# Bloom

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  walkthrough.md
androidApp/: build.gradle.kts  proguard-rules.pro
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/java/com/novarytm/android/: MainActivity.kt
androidApp/src/main/res/xml/: network_security_config.xml
iosApp/iosApp/: ContentView.swift
rust_core/: Cargo.toml
rust_core/src/: lib.rs  prediction_engine.rs
shared/: build.gradle.kts
shared/src/androidMain/kotlin/com/novarytm/auth/: BiometricAuthenticator.kt  GoogleAuthManager.kt
shared/src/androidMain/kotlin/com/novarytm/db/: DatabaseHelper.kt
shared/src/androidMain/kotlin/com/novarytm/ffi/: RustBridge.kt
shared/src/commonMain/composeResources/values/: strings.xml
shared/src/commonMain/composeResources/values-ar/: strings.xml
shared/src/commonMain/composeResources/values-de/: strings.xml
shared/src/commonMain/composeResources/values-es/: strings.xml
shared/src/commonMain/composeResources/values-fr/: strings.xml
shared/src/commonMain/composeResources/values-hi/: strings.xml
shared/src/commonMain/composeResources/values-it/: strings.xml
shared/src/commonMain/composeResources/values-ja/: strings.xml
shared/src/commonMain/composeResources/values-pt/: strings.xml
shared/src/commonMain/composeResources/values-ru/: strings.xml
shared/src/commonMain/composeResources/values-zh/: strings.xml
shared/src/iosMain/kotlin/: main.ios.kt
(+48 files in other folders)
