[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
chrono = "0.4.38"
jni = "0.21"
argon2 = "0.5.3"
password-hash = "0.5.0"
rand_core = { version = "0.6", features = ["std"] }
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chacha20poly1305 = "0.10.1"
blake3 = "1.5.1"
base64 = "0.22"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 0
